--- a/content/pages/about/index.mdx
+++ b/content/pages/about/index.mdx
@@ -4,5 +4,7 @@ slug: "/about"
 ---
 
 Hi!
-
-Currently, pursuing B.E. in Computer Engineering at Pimpri Chinchwad College of Engineering (PCCOE), Pune.
+I am Ashish Dattatraya Pawar.
+Currently, I am pursuing B.E. in Computer Engineering at Pimpri Chinchwad College of Engineering (PCCOE), Pune.
+I have completed 2 months of Internship in Baoiam Innovations Pvt. Ltd. at the position of Frontend Website Developer.
+Interested in development in Python and C++.
