--- a/src/@lekoarts/gatsby-theme-minimal-blog/texts/hero.mdx
+++ b/src/@lekoarts/gatsby-theme-minimal-blog/texts/hero.mdx
@@ -2,5 +2,5 @@
   Hi.
 </Text>
 
-I'm Ganesh Pawar. I am a software and technology enthusiast.
-Currently, pursuing B.E. in Computer Engineering at Pimpri Chinchwad College of Engineering (PCCOE), Pune.
+I'm Ashish Pawar. 
+I have completed 2 months of Internship at Baoiam Innovations Pvt. Ltd.
