--- a/src/@lekoarts/gatsby-theme-minimal-blog/texts/hero.mdx
+++ b/src/@lekoarts/gatsby-theme-minimal-blog/texts/hero.mdx
@@ -1,6 +1,26 @@
 <Text sx={{ fontSize: [4, 5, 6], fontWeight: `bold`, color: `heading` }}>
-  Hi.
+  Hi,
 </Text>
 
 I'm Ashish Pawar. 
+
 I have completed 2 months of Internship at Baoiam Innovations Pvt. Ltd.
+
+<Text sx={{ fontSize: [4, 5, 6], fontWeight: `bold`, color: `heading` }}>
+  Skills:
+</Text>
+
+Python
+C++
+MySql
+Html
+CSS
+Javascript
+
+<Text sx={{ fontSize: [4, 5, 6], fontWeight: `bold`, color: `heading` }}>
+  Languages:
+</Text>
+Engilsh 
+Hindi 
+Marathi
+
